--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -14,42 +14,50 @@
 </head>
 <body class="d-flex flex-column h-100">
 <header th:fragment="header">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" >
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Apple Store</a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" th:href="@{/}" href="#">
+                <img th:src="@{/image/logo.png}" src="../static/image/logo.png" width="250" class="d-inline-block align-top" alt=""/>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav mr-auto"></ul>
+                <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page"
-                           href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
-                    <li class="nav-item"> <!--sec:authorize="hasAnyAuthority('ADMIN','USER')"-->
-                        <a class="nav-link" href="/sanphams">List
-                            Product</a></li>
-                    <li class="nav-item"> <!--sec:authorize="hasAnyAuthority('ADMIN')"-->
-                        <a class="nav-link"
-                           href="/sanphams/add">Add Product</a></li>
-                    <li class="nav-item"><a class="nav-link"
-                                            href="/cart">Cart</a></li>
+                    <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN','USER')">
+                        <a class="nav-link" href="/sanphams">
+                            List Product
+                        </a>
+                    </li>
+                    <li class="nav-item"
+                        sec:authorize="hasAnyAuthority('ADMIN')">
+                        <a class="nav-link" href="/sanphams/add">
+                            Add Product
+                        </a>
+                    </li>
+                    <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN','USER')">
+                        <a class="nav-link" href="/cart">
+                            Cart
+                        </a>
+                    </li>
                     <li sec:authorize="isAuthenticated()">
                         <form th:action="@{/logout}" method="post">
                             <button class="btn btn-outline-danger"
                                     type="submit">Logout</button>
                         </form>
                     </li>
-                    <li ><!--sec:authorize="!isAuthenticated()"-->
+                    <li sec:authorize="!isAuthenticated()">
                         <a class="btn btn-outline-primary" href="/login">
                             Login
                         </a>
                     </li>
                 </ul>
+
             </div>
         </div>
     </nav>
