--- a/src/main/resources/templates/sanpham/list.html
+++ b/src/main/resources/templates/sanpham/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"      lang="en">
-<!--      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"-->
-
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,60 +16,41 @@
 <th:block th:replace="~{layout::header}"></th:block>
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
-            <nav class="navbar navbar-light">
-                <div class="container-fluid">
-                    <h2>My Product List</h2>
-                    <form class="d-flex" th:action="@{/sanphams/search}" method="get">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="keyword">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
+        <div class="col-sm-3">
+            <h4>Danh mục</h4>
+            <ul class="list-group" >
+                <a th:href="@{/sanphams}" style="text-decoration: none;"><li class="list-group-item">All Products</li></a>
+            </ul>
+        </div>
+        <div class="col-md-9">
+            <h2 style="text-align: center;">My Product List</h2>
+            <form class="d-flex" th:action="@{/sanphams/search}" method="get" style="justify-content: flex-end;">
+                <input type="search" placeholder="Search" aria-label="Search" name="keyword">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+            <div class="card" style="margin-top: 20px" th:each="sanpham : ${sanphams}">
+                <div class="row no-gutters" >
+                    <div class="col-sm-5 d-flex justify-content-center">
+                        <img class="" height="150px" width="150px" th:src="@{${'/image/' + sanpham.image}}" th:alt="${sanpham.title}">
+                    </div>
+                    <div class="col-sm-7 d-flex justify-content-center">
+                        <div class="card-body">
+                            <h5 class="card-title" th:text="${sanpham.title}" ></h5>
+                            <h4><span th:text="${sanpham.getFormattedPrice()}"></span> VNĐ</h4>
+                            <a href="#" th:href="@{/sanphams/viewproduct/{id}(id=${sanpham.getId()})}" class="btn btn-primary">View Product</a>
+                            <a class="btn btn-primary"
+                               sec:authorize="hasAnyAuthority('ADMIN')"
+                               th:href="@{/sanphams/edit/{id}(id=${sanpham.getId()})}">Edit</a>
+                            <a class="btn btn-danger"
+                               sec:authorize="hasAnyAuthority('ADMIN')"
+                               th:href="@{/sanphams/delete/{id}(id=${sanpham.getId()})}"
+                               onclick="return confirm('Are you sure you want to delete this product?')">Delete</a>
+                        </div>
+                    </div>
                 </div>
-            </nav>
+            </div>
         </div>
     </div>
-    <table class="table">
-        <thead>
-        <tr>
-            <th><a th:href="@{/sanphams(pageNo=${currentPage}, sortBy='id')}">Id</a></th>
-            <th><a th:href="@{/sanphams(pageNo=${currentPage}, sortBy='title')}">Title</a></th>
-            <th><a th:href="@{/sanphams(pageNo=${currentPage}}">Image</a></th>
-            <th><a th:href="@{/sanphams(pageNo=${currentPage}, sortBy='price')}">Price</a></th>
-            <th><a th:href="@{/sanphams(pageNo=${currentPage}, sortBy='category')}">Category</a></th>
-            <th><a th:href="@{/sanphams(pageNo=${currentPage}, sortBy='mau')}">Color</a></th>
-            <th>Action</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="sanpham : ${sanphams}">
-            <td th:text="${sanpham.getId()}"></td>
-            <td th:text="${sanpham.getTitle()}"></td>
-            <td><img th:src="@{'/image/' + ${sanpham.image}}" width="50px" height="75px"></td>
-            <td th:text="${sanpham.getPrice()}"></td>
-            <td th:text="${sanpham.getNhomsanpham().getName()}"></td>
-            <td th:text="${sanpham.getMau().getName()}"></td>
-            <td colspan="2">
-                <a class="btn btn-primary" th:href="@{/sanphams/edit/{id}(id=${sanpham.getId()})}">Edit</a>
-                <!--sec:authorize="hasAnyAuthority('ADMIN')"-->
-                <a class="btn btn-danger"
-                   th:href="@{/sanphams/delete/{id}(id=${sanpham.getId()})}"
-                   onclick="return confirm('Are you sure you want to delete this product?')">Delete</a>
-                <!--           sec:authorize="hasAnyAuthority('ADMIN')"-->
-
-                <form th:action="@{/sanphams/add-to-cart}" method="post" class="d-inline">
-                    <input type="hidden" name="id" th:value="${sanpham.getId()}">
-                    <input type="hidden" name="name" th:value="${sanpham.getTitle()}">
-                    <input type="hidden" name="image" th:value="${sanpham.getImage()}">
-                    <input type="hidden" name="price" th:value="${sanpham.getPrice()}">
-                    <input type="hidden" name="color" th:value="${sanpham.getMau().getName()}">
-                    <button type="submit" class="btn btn-success"
-                            onclick="return confirm('Are you sure you want to add this product to cart?')">
-                        Add to cart</button>
-                </form>
-            </td>
-        </tr>
-        </tbody>
-    </table>
 </div>
 <nav aria-label="Page navigation example" style="display: flex; margin: 10px;justify-content: center;">
     <ul class="pagination justify-content-center pagination-sm" th:each="i : ${#numbers.sequence(0, totalPages)}">
@@ -78,6 +59,9 @@
         </li>
     </ul>
 </nav>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <th:block th:replace="~{layout::footer}"></th:block>
 </body>
 </html>
