--- a/src/main/resources/templates/sanpham/cart.html
+++ b/src/main/resources/templates/sanpham/cart.html
@@ -52,13 +52,79 @@
     </tr>
     </tbody>
   </table>
+      <div class="row">
+        <!--Grid column-->
+        <div class="col-lg-8 mb-4">
+          <!-- Card -->
+          <div class="card wish-list pb-1">
+            <div class="card-body">
+              <h5 class="mb-2">Billing details</h5>
+              <!-- Grid row -->
+              <div class="row">
+                <!-- Grid column -->
+                <div class="col-lg-6">
+                  <!-- First name -->
+                  <div class="md-form md-outline mb-0 mb-lg-4">
+                    <label for="firstName">First name</label>
+                    <input type="text" id="firstName" required class="form-control mb-0 mb-lg-2">
+                  </div>
+
+                </div>
+                <!-- Grid column -->
+                <!-- Grid column -->
+                <div class="col-lg-6">
+                  <!-- Last name -->
+                  <div class="md-form md-outline">
+                    <label for="lastName">Last name</label>
+                    <input type="text" id="lastName" required class="form-control">
+                  </div>
+                </div>
+                <!-- Grid column -->
+              </div>
+              <!-- Grid row -->
+              <!-- Country -->
+              <div class="d-flex flex-wrap">
+                <div class="select-outline position-relative w-100">
+                  <label>Country - <strong>VietNam</strong></label>
+                </div>
+              </div>
+              <!-- Address Part 1 -->
+              <div class="md-form md-outline mt-2">
+                <label for="form14">Address (Line 1)</label>
+                <input type="text" required id="form14" placeholder="House number and street name" class="form-control">
+              </div>
+              <!-- Address Part 2 -->
+              <div class="md-form md-outline mt-2">
+                <label for="form15">Address (Line 2)</label>
+                <input type="text" id="form15" placeholder="Apartment, suite, unit etc. (optional)"
+                       class="form-control">
+              </div>
+              <!-- Town / City -->
+              <div class="md-form md-outline mt-2">
+                <label for="form17">Town / City</label>
+                <input type="text" required id="form17" class="form-control">
+              </div>
+              <!-- Phone -->
+              <div class="md-form md-outline mt-2">
+                <label for="form18">Phone</label>
+                <input type="number" minlength="10" maxlength="10" required id="form18" class="form-control">
+              </div>
+              <!-- Email address -->
+              <div class="md-form md-outline mt-2">
+                <label for="form19">Email address</label>
+                <input type="email" required id="form19" class="form-control">
+              </div>
+            </div>
+          </div>
+          <!-- Card -->
+        </div>
+      </div>
   <div class="row">
     <div class="col-md-12">
       <h3>Total: <span th:text="${totalPrice}"></span></h3>
     </div>
     <div class="col-md-12 text-center">
-      <a class="btn btn-success"
-         th:href="@{/cart/checkout}">Checkout</a>
+      <a class="btn btn-success" th:href="@{/cart/checkout}">Checkout</a>
       <a class="btn btn-danger"
          th:href="@{/cart/clearCart}">Clear Cart</a>
     </div>
