--- a/src/main/resources/templates/sanpham/list.html
+++ b/src/main/resources/templates/sanpham/list.html
@@ -52,13 +52,11 @@
         </div>
     </div>
 </div>
-<nav aria-label="Page navigation example" style="display: flex; margin: 10px;justify-content: center;">
-    <ul class="pagination justify-content-center pagination-sm" th:each="i : ${#numbers.sequence(0, totalPages)}">
-        <li class="page-item" th:classappend="${currentPage == i} ? 'active'">
-            <a class="page-link" th:href="@{/sanphams(pageNo=${i})}" th:text="${i+1}" style="margin: 2px;"></a>
-        </li>
-    </ul>
-</nav>
+<div aria-label="Page navigation example" style="display: flex; margin: 10px;justify-content: center; margin: 2px;">
+    <a th:href="@{'/sanphams'(page=${sanphams.number - 1})}" th:if="${sanphams.hasPrevious()}" >Previous</a>
+    <span th:text="${sanphams.number + 1}"></span>/<span th:text="${sanphams.totalPages}"></span>
+    <a th:href="@{'/sanphams'(page=${sanphams.number + 1})}" th:if="${sanphams.hasNext()}">Next</a>
+</div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
